updated linkedin url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a class="anti-social" href="https://github.com/fullstackadept" target="_blank">
         <i class="fa fa-github-square fa-3x" aria-hidden="true"><span>github</span></i>
       </a>
-      <a class="anti-social" href="http://www.linkedin.com/pub/chris-martin/6b/4aa/181/" target="_blank">
+      <a class="anti-social" href="https://www.linkedin.com/in/chris-martin-1814aa6b/" target="_blank">
         <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"><span>linkedin</span></i>
       </a>
       <a class="anti-social" href="https://twitter.com/fullstackadept" target="_blank">
